feat: implement payment request for expert and repair.
