# docs/swagger.json
@@ -775,7 +775,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/handlers.AmountFee"
+                            "$ref": "#/definitions/handlers.PaymentRequest"
                         }
                     }
                 ],
@@ -1020,14 +1020,6 @@
                 "DONE_STATUS"
             ]
         },
-        "handlers.AmountFee": {
-            "type": "object",
-            "properties": {
-                "fee": {
-                    "type": "integer"
-                }
-            }
-        },
         "handlers.ErrorResponseRegisterLogin": {
             "type": "object",
             "properties": {
@@ -1047,6 +1039,24 @@
                 },
                 "username": {
                     "type": "string"
+                }
+            }
+        },
+        "handlers.PaymentRequest": {
+            "type": "object",
+            "required": [
+                "adID",
+                "transactionType"
+            ],
+            "properties": {
+                "adID": {
+                    "type": "integer"
+                },
+                "transactionType": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
                 }
             }
         },
